bookstore-app/YAML/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-app
  labels:
    app: bookstore-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookstore-app
  template:
    metadata:
      labels:
        app: bookstore-app
    spec:
      containers:
      - name: bookstore-app
        image: YOUR_ACR_NAME.azurecr.io/bookstore-app:latest
        ports:
        - containerPort: 5000

        # Use ConfigMap for Environment Variables
        resources:
          limits:
            memory: "512Mi"
          requests:
            memory: "256Mi"
