bookstore-app/YAML/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-app
  labels:
    app: bookstore-app
spec:
  type: LoadBalancer
  selector:
    app: bookstore-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
